@@ -210,41 +210,24 @@
 
 
 ;; Indexing into vectors or lists of known size.
-;;
-;; TODO: The specific vector or list type will be smashed to just
-;; "vector" or "(or pair null)" after the first operation.  This is
-;; why the let is repeated; otherwise we won't get the warnings for
-;; subsequent references.  For vectors this is overly pessimistic.
 (let ((v1 (vector 'a 'b 'c)))
-  (define (vector-ref-warn1) (vector-ref v1 -1)))
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-ref-warn2) (vector-ref v1 3)))
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-ref-warn3) (vector-ref v1 4)))
-
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-ref-nowarn1) (vector-ref v1 0)))
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-ref-nowarn2) (vector-ref v1 2)))
-
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-ref-standard-warn1) (vector-ref v1 'bad)))
-
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-set!-warn1) (vector-set! v1 -1 'whatever)))
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-set!-warn2) (vector-set! v1 3 'whatever)))
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-set!-warn3) (vector-set! v1 4 'whatever)))
-
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-set!-nowarn1) (vector-set! v1 0 'whatever)))
-(let ((v1 (vector 'a 'b 'c)))
-  (define (vector-set!-nowarn2) (vector-set! v1 2 'whatever)))
-
-(let ((v1 (vector 'a 'b 'c)))
+  (define (vector-ref-warn1) (vector-ref v1 -1))
+  ;; After the first expression, v1's type is smashed to (vector * * *)!
+  (define (vector-ref-warn2) (vector-ref v1 3))
+  (define (vector-ref-warn3) (vector-ref v1 4))
+  (define (vector-ref-nowarn1) (vector-ref v1 0))
+  (define (vector-ref-nowarn2) (vector-ref v1 2))
+  (define (vector-ref-standard-warn1) (vector-ref v1 'bad))
+  (define (vector-set!-warn1) (vector-set! v1 -1 'whatever))
+  (define (vector-set!-warn2) (vector-set! v1 3 'whatever))
+  (define (vector-set!-warn3) (vector-set! v1 4 'whatever))
+  (define (vector-set!-nowarn1) (vector-set! v1 0 'whatever))
+  (define (vector-set!-nowarn2) (vector-set! v1 2 'whatever))
   (define (vector-set!-standard-warn1) (vector-set! v1 'bad 'whatever)))
 
+;; The specific list type will be smashed to just "(or pair null)"
+;; after the first operation.  This is why the let is repeated;
+;; otherwise we won't get the warnings for subsequent references.
 (let ((l1 (list 'a 'b 'c)))
   (define (list-ref-warn1) (list-ref l1 -1)))
 (let ((l2 (cons 'a (cons 'b (cons 'c (eval '(list)))))))
