@@ -5,6 +5,8 @@
   - Warnings are now emitted when using vector-{ref,set!} or one
     of take, drop, list-ref or list-tail with an out of range index
     for vectors and lists of a definitely known length.
+  - The scrutinizer will no longer drop knowledge of the length of a
+    vector.  It still drops types of its contents (which may be mutated).
 
 - Runtime system:
   - C_locative_ref has been deprecated in favor of C_a_i_locative_ref,
